<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <data>

        <variable
            name="viewModel"
            type="com.example.weather.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:text="@string/bangalore"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/fifteenSp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCurrentWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteendp"
            android:text="@string/currentWeather"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/fifteenSp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCurrentWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDp"
            android:paddingBottom="@dimen/tenDp"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentWeather">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeather"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyDp"
                android:layout_marginLeft="@dimen/twentyDp"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/eighteenSp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPressure"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyDp"
                android:layout_marginLeft="@dimen/twentyDp"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/eighteenSp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeather"
                tools:text="@string/app_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHumidity"
                android:layout_width="@dimen/zeroDp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyDp"
                android:layout_marginLeft="@dimen/twentyDp"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/eighteenSp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPressure"
                tools:text="@string/app_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherHourlyUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteendp"
            android:text="@string/hourlyUpdates"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/fifteenSp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clCurrentWeather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHourlyOutput"
            android:layout_width="@dimen/zeroDp"
            android:layout_height="@dimen/zeroDp"
            android:layout_marginTop="@dimen/tenDp"
            android:layout_marginBottom="@dimen/twentyDp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeatherHourlyUpdates" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoHourlyUpdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twentyDp"
            android:layout_marginLeft="@dimen/twentyDp"
            android:layout_marginEnd="@dimen/twentyDp"
            android:layout_marginRight="@dimen/twentyDp"
            android:text="@string/noHourlyUpdates"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/eighteenSp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeatherHourlyUpdates" />

        <ProgressBar
            android:id="@+id/pgLoadData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>